URL stretching table fixes

--- a/src/css/search-bar.css
+++ b/src/css/search-bar.css
@@ -59,12 +59,7 @@ a,a:visited {
   border: 1px solid #ccc; 
   text-align: left; 
   
-	-ms-word-break: break-all;
-	/* Non standard for webkit */
-	word-break: break-word;
-	-webkit-hyphens: auto;
-	-moz-hyphens: auto;
-	hyphens: auto;
+	overflow: scroll;
 }
 
 .rssFeedContainer {
